# mas-subsystem

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
corpus/: papers.jsonl  papers.npy
data/: domain_categories.json  stopwords_ru.txt
deploy/: docker-compose.observability.yml  prometheus.yml
deploy/grafana/dashboards/: mas-overview.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
experiments/: README.md  bench_rouge.py  bench_terms.py  bench_wer.py  loadtest.py  loadtest_real.py  serve_orchestration.py  serve_real.py
experiments/results/: loadtest-real.csv  loadtest.csv  rouge-results.json  terms-results.json  wer-results.json
migrations/: env.py
migrations/versions/: 0fe2e88121f2_set_null_on_term_text_chunk_fk.py  17d95e97e0b5_initial_schema.py
scripts/: check_commit_msg.py
src/: config.py  main.py  plan.py
src/adapters/: embedding.py  gigachat.py  llm.py  ner.py  ocr.py  sentence_transformer.py  spacy_ner.py  transcriber.py  whisper_transcriber.py
src/agents/: _llm_json.py  assembly.py  base.py  coordinator.py  ocr.py  payloads.py  recommender.py  store.py  summarizer.py  terminology.py  test_generator.py  transcriber.py
src/api/: routes.py
src/core/: bus.py  idempotency.py  messages.py  metrics.py  retry.py  schemas.py  status_fsm.py
src/corpus_builder/: build.py
src/db/: models.py  repos.py  result_mapping.py  session.py
src/evaluation/: report.py  rouge.py  term_prf.py  wer.py
tests/: conftest.py
tests/contracts/: test_chunk_id_contract.py  test_db_schema.py  test_message_shapes.py  test_openapi_spec.py  test_rest_contract.py  test_rest_edges.py  test_result_artifact.py
tests/e2e/: test_happy_path.py  test_recovery.py  test_resilience.py  test_status_progression.py
tests/integration/: test_agents.py  test_bus_redis.py  test_coordinator_redis.py  test_eval_run.py  test_result_persistence.py
tests/perf/: test_dispatch_throughput.py
tests/support/: fake_bus.py
tests/unit/: test_adapter_chunk_mapping.py  test_adapter_protocol_conformance.py  test_adapters.py  test_agent_flags.py  test_assembly.py  test_build_recommender.py  test_coordinator_dispatch.py  test_corpus_builder.py  test_embedding_adapter.py  test_eval_intrinsic.py  test_eval_metrics.py  test_eval_report.py  test_llm_adapter.py  test_llm_json.py  test_main_adapter_selection.py  test_metrics.py  test_ner_adapter.py  test_ocr.py  test_payloads.py  test_plan_properties.py  test_recommender.py  test_result_mapping.py  test_schemas_quiz.py  test_spacy_ner.py  test_status_fsm.py  test_summarizer.py  test_terminology.py  test_test_generator.py  test_transcriber.py  test_whisper_chunks.py
