[project]
name = "mas-subsystem"
version = "0.1.0"
description = "Multi-agent subsystem for intelligent processing of student research data"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Ruslan Pogosyants", email = "ruslanpogosyants9594@gmail.com" }]

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "jinja2>=3.1,<4.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.30,<0.31",
    "psycopg2-binary>=2.9",
    "redis>=5.2,<6.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "httpx>=0.27,<0.28",
    "python-multipart>=0.0.9",
    "loguru>=0.7,<1.0",
]

[project.optional-dependencies]
ml = [
    "faster-whisper>=1.0,<2.0",
    "easyocr>=1.7,<2.0",
    "pymupdf>=1.24,<2.0",
    "spacy>=3.7,<4.0",
    "sentence-transformers>=3.0,<4.0",
    "gigachat>=0.1,<1.0",
    "numpy>=1.26,<3.0",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5,<6",
    "hypothesis>=6.111,<7.0",
    "testcontainers[postgres,redis]>=4.8,<5.0",
    "anyio>=4,<5",
    "ruff>=0.7,<1.0",
    "mypy>=1.13,<2.0",
    "pre-commit>=4,<5",
    "types-redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
