[project]
name = "mas-research"
version = "0.1.0"
description = "Multi-agent subsystem for intelligent processing of student research data"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Ruslan Pogosyants", email = "ruslanpogosyants9594@gmail.com" }]

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "jinja2>=3.1,<4.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.30,<0.31",
    "psycopg2-binary>=2.9",
    "redis>=5.2,<6.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "httpx>=0.27,<0.28",
    "python-multipart>=0.0.9",
    "loguru>=0.7,<1.0",
    "prometheus-client>=0.21,<1.0",
]

[project.optional-dependencies]
ml = [
    "faster-whisper>=1.0,<2.0",
    "easyocr>=1.7,<2.0",
    "pymupdf>=1.24,<2.0",
    "spacy>=3.7,<4.0",
    "sentence-transformers>=3.0,<4.0",
    "gigachat>=0.1,<1.0",
    "numpy>=1.26,<3.0",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=5,<6",
    "hypothesis>=6.111,<7.0",
    "testcontainers[postgres,redis]>=4.8,<5.0",
    "anyio>=4,<5",
    "asgi-lifespan>=2,<3",
    "ruff>=0.7,<1.0",
    "mypy>=1.13,<2.0",
    "pre-commit>=4,<5",
    "types-redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "RUF",
    "PLR", "PLW", "PLE",
]
ignore = [
    "B008",
    "PLR0913",
    # This is a Russian-language product: source strings, docstrings, and comments
    # legitimately contain Cyrillic, which RUF001-003 flag as "ambiguous unicode".
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "N802", "PLR2004"]
"src/db/models.py" = ["TCH003"]

[tool.ruff.lint.pylint]
max-args = 5
max-statements = 30

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/", "scripts/"]

[[tool.mypy.overrides]]
module = ["easyocr.*", "faster_whisper.*", "gigachat.*", "sentence_transformers.*", "fitz.*", "spacy.*", "numpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["redis.*"]
ignore_missing_imports = true

# redis-py 5.x ships partial inline types; async client methods like xack /
# xpending lack return annotations and the Redis generic has unfilled type
# args. Disabling these two codes only inside the thin bus wrapper keeps the
# rest of the codebase under --strict.
[[tool.mypy.overrides]]
module = ["src.core.bus", "src.main"]
# str-unpack/union-attr/index appear when redis-py's async xreadgroup return is
# resolved as a loose `Any | int | str` union (varies by redis version across the
# project venv vs the isolated pre-commit mypy env). The bus handles the real
# runtime shape correctly; suppress the stub-driven noise in this thin wrapper.
disable_error_code = ["no-untyped-call", "type-arg", "attr-defined", "str-unpack", "union-attr", "index"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "slow: tests requiring real ML models (excluded from CI)",
    "integration: tests requiring Redis/Postgres via testcontainers",
    "e2e: end-to-end acceptance tests",
    "perf: performance and throughput guards",
]
